# test_aiflow

./: .agentize.yaml  .tmp_issue_body.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md
docs/: cholesky.md  git-msg-tags.md
include/: README.md
src/: README.md  cholesky.c  cholesky.md  hello.c
tests/: README.md  test_cholesky.c  test_main.c
